<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelPatientFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/patient_first_name"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/separator7"
        app:layout_constraintTop_toTopOf="@+id/separator7" />

    <TextView
        android:id="@+id/textViewPatientFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/patient_first_name_text"

        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/separator7"
        app:layout_constraintTop_toTopOf="@+id/separator7" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dip"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="#686868"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientFName" />

    <TextView
        android:id="@+id/labelPatientSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"

        android:text="@string/sex"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator8" />

    <TextView
        android:id="@+id/textViewPatientSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/sex_text"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator8"
         />
    <View
            android:id="@+id/separator2"
            android:layout_width="0dp"
            android:layout_height="1dip"
            android:background="#686868"
            app:layout_constraintStart_toStartOf="@+id/separator"

            app:layout_constraintTop_toBottomOf="@+id/textViewPatientSex"
            app:layout_constraintEnd_toEndOf="@+id/separator"/>

    <TextView
        android:id="@+id/labelPatientBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"

        android:text="@string/birthdate"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <TextView
        android:id="@+id/textViewPatientBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/birthdate_text"
        android:textSize="17sp"

        app:layout_constraintStart_toEndOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <View
            android:id="@+id/separator3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#686868"

            app:layout_constraintTop_toBottomOf="@+id/textViewPatientBirthdate"
            app:layout_constraintStart_toStartOf="@+id/separator" app:layout_constraintEnd_toEndOf="@+id/separator"
    />

    <TextView
        android:id="@+id/labelPatientPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"

        android:text="@string/phone_number"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator3" />

    <TextView
        android:id="@+id/textViewPatientPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"

        android:text="@string/phone_number_text"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator3" />

    <View
            android:id="@+id/separator4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#686868"
            app:layout_constraintStart_toStartOf="@+id/separator"
            app:layout_constraintTop_toBottomOf="@+id/textViewPatientPhoneNumber"
            app:layout_constraintEnd_toEndOf="@+id/separator"/>

    <TextView
        android:id="@+id/labelPatientAlergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"

        android:text="@string/alergies"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator4" />

    <TextView
        android:id="@+id/textViewPatientAlergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/alergies_text"

        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator4" />

    <View
        android:id="@+id/separator5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#686868"
        app:layout_constraintEnd_toEndOf="@+id/separator"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientAlergies" />

    <ImageView
        android:id="@+id/imageViewPatientPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="avatar"
        android:maxWidth="@android:dimen/thumbnail_width"
        android:maxHeight="@android:dimen/thumbnail_height"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mr_bean"
        tools:srcCompat="@drawable/mr_bean" />

    <Button
        android:id="@+id/buttonSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_schedule_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator5" />
    <Button
            android:text="@string/btn_results_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonResults"
            app:layout_constraintEnd_toEndOf="@+id/buttonSchedule"
            app:layout_constraintStart_toStartOf="@+id/buttonSchedule" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSchedule"/>

    <View
        android:id="@+id/separator7"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#686868"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/separator5"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPatientPhoto"
        app:layout_constraintStart_toStartOf="@+id/imageViewPatientPhoto"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPatientPhoto" />

    <TextView
        android:id="@+id/labelPatientLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:textSize="17sp"
        android:text="@string/patient_last_name"
        app:layout_constraintEnd_toStartOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/textViewPatientLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginStart="2dp"
        android:text="@string/patient_last_name_text"
        app:layout_constraintStart_toEndOf="@+id/separator7"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <View
        android:id="@+id/separator8"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#686868"
        app:layout_constraintEnd_toEndOf="@+id/separator"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientLName" />

</androidx.constraintlayout.widget.ConstraintLayout>